--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<meta http-equiv="refresh" content="1; URL=https://www.crizymc.tebex.io/" />
+<meta http-equiv="refresh" content="1; URL=https://www.crizzymc.tebex.io/" />
 Wait 2 Seconds for Redirect!
